# rust-dispatch

./: Cargo.toml  Makefile  main.rs  payload.rs
dump/: dynamic  static
