[package]
name = "dispatch-profiles"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dp"
path = "main.rs"

# profile.dev already has these optimizations by default
# this is to explicitly document the intention.
[profile.no-opts]
inherits = "dev"
lto = "off"
opt-level = 0

[features]
default = []

[dependencies]
chrono = "0.4.44"
